Bug 258775 - Moving an album from one collection to another doesn't update the source collection
Summary: Moving an album from one collection to another doesn't update the source coll...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Database-Albums (other bugs)
Version First Reported In: 1.5.0
Platform: Fedora RPMs Linux
: NOR major
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-04 09:53 UTC by Vincent Tassy
Modified: 2017-07-19 13:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vincent Tassy 2010-12-04 09:53:00 UTC
Version:           1.5.0 (using KDE 4.5.3) 
OS:                Linux

I have two collections defined:
- 1 on my local HDD
- 1 on my NAS (Collection on Network Share)

Here's the problem:

- Move one folder from one collection to another collection
- Folder and content are now visible in the destination collection
- Folder and content thumbnails still visible in the original collection !
- Physically, the files have been moved (they're in the destination collection
and no longer in the original one)

- Pressing F5 doesn't fix it
- Rescanning the collections doesn't fix it

- Closing digikam, relaunching it still shows the folder and thumbnails in the
original collection
- Rescaning the collections now makes the folder disappear from the original
collection

Reproducible: Always

Steps to Reproduce:
- Move one folder from one collection to another collection

Actual Results:  
- Folder and content are now visible in the destination collection
- Folder and content thumbnails still visible in the original collection !
- Physically, the files have been moved (they're in the destination collection
and no longer in the original one)

Expected Results:  
Folder and content should be visible only in the destination collection

It was working fine in 1.2.0
It started happening when Fedora upgraded digikam from 1.2.0 to 1.5.0

It's DANGEROUS because you might think the files are still in the source collection ! and if you happen to delete the ones visible in the destination collection then you actually lose your files !!!!!!
Comment 1 Vincent Tassy 2010-12-15 07:43:52 UTC
Just upgraded my machine to Fedora 14.
Problem is still present with digikam 1.5.0 on KDE 4.5.4
Comment 2 Vincent Tassy 2010-12-19 18:58:50 UTC
Fedora 14 just pushed Digikam 1.6.0
Problem still there !
Comment 3 Vincent Tassy 2010-12-20 15:57:29 UTC
Just tried on brand new system with Ubuntu 10.10 and digikam 1.4.0.
Exact same problem.
Comment 4 Vincent Tassy 2010-12-20 16:48:06 UTC
Ubuntu 10.10 and digikam 1.6.0 shows the exact same problem
Comment 5 Vincent Tassy 2010-12-21 13:42:03 UTC
Just for the record, problem occurs also with local collections.

My I stress that this bug might lead to data loss ! I believe it should be investigated rapidly !
Comment 6 Marcel Wiesweg 2011-01-28 12:50:22 UTC
SVN commit 1217743 by mwiesweg:

Fix check: Do not refuse to rename if relative path is identical, but albumRootId changed.
Remove stale album from destination location, not source location.

BUG: 258775



 M  +3 -1      NEWS  
 M  +5 -5      libs/database/albumdb.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1217743
Comment 7 Marcel Wiesweg 2011-01-28 13:19:32 UTC
*** Bug 261624 has been marked as a duplicate of this bug. ***