Fix check: Do not refuse to rename if relative path is identical, but albumRootId changed. Remove stale album from destination location, not source location.

BUG: 258775


svn path=/branches/extragear/graphics/digikam/core/; revision=1217743